--- a/css/main.css
+++ b/css/main.css
@@ -152,9 +152,9 @@ header {
   min-height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
   -o-background-size: cover;
   background-position: center;
+  background-size: cover;
   background-image: url('../img/tc-teddy.jpg');
   text-align: center;
   color: white;
@@ -232,9 +232,9 @@ header .header-content .header-content-inner p {
 }
 .portfolio-box .portfolio-box-caption {
   color: white;
-  opacity: 0;
+  opacity: 1;
   display: block;
-  background: rgba(69, 139, 203, 0.9);
+  background: rgba(69, 139, 203, 0.7);
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -265,14 +265,14 @@ header .header-content .header-content-inner p {
   font-size: 14px;
 }
 .portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
+  background: rgba(48, 113, 173, 0.85);
 }
 .portfolio-box:focus {
   outline: none;
 }
 @media (min-width: 768px) {
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    font-size: 22px;
+    font-size: 30px;
   }
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     font-size: 14px;
@@ -417,4 +417,7 @@ body {
 }
 .footer-text {
   padding-top: 3em;
+}
+.social-icon {
+  padding: .5em 0;
 }
