added border to the service images

--- a/less/main.less
+++ b/less/main.less
@@ -244,6 +244,7 @@ header {
     max-width: 650px;
     margin: 0 auto;
     width: 100%;
+    border: thin solid white;
     .portfolio-box-caption {
         color: white;
         opacity: 1;
