--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,7 @@ header .header-content .header-content-inner p {
   max-width: 650px;
   margin: 0 auto;
   width: 100%;
+  border: thin solid white;
 }
 .portfolio-box .portfolio-box-caption {
   color: white;
