--- a/less/main.less
+++ b/less/main.less
@@ -82,6 +82,10 @@ aside {
     padding: 0;
 }
 
+.half-padding {
+    padding: 50px 0;
+}
+
 // Navigation
 
 .navbar-default {
@@ -177,7 +181,7 @@ header {
     .background-cover;
     background-position: center;
     background-size: cover;
-    background-image: url('../img/tc-teddy.jpg');
+    background-image: url('../img/tc-teddy-opt.jpg');
     text-align: center;
     color: white;
     .header-content {
